Bug 1647378 - stop using mStartupWriteInitiated in the gtest for startupcache, r=dthayer

Differential Revision: https://phabricator.services.mozilla.com/D80764